--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,12 @@
 			<artifactId>bboxdb-commons</artifactId>
 			<version>0.9.8</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/gov.nist.math/jama -->
+		<dependency>
+			<groupId>gov.nist.math</groupId>
+			<artifactId>jama</artifactId>
+			<version>1.0.3</version>
+		</dependency>
 
 
 		<!-- Testing dependencies -->
